# IC-MAGE-Teaching

./: definitions.md  play_with_equipment.ipynb  requirements.txt  run_test.ipynb  scale_data.ipynb
.claude/: settings.local.json
Model-Clay/: Model_clay_drained_undrained.xlsx
Model-Sand/: .gitignore  m02_tx_integrator_demo.ipynb  m02_tx_integrator_interactive.ipynb  requirements.txt
Model-Sand/.github/agents/: txc-library-plan.agent.md
Model-Sand/m02_tx_integrator/: README.md  pyproject.toml
Model-Sand/m02_tx_integrator/src/m02_tx_integrator/: __init__.py  exporter.py  integrator.py  parameters.py  plotter.py  presets.py  results.py  test_conditions.py
Sketch-Clay/: Drained clay data.xlsx  Undrained clay data.xlsx
Sketch-Clay/Digitise/: Dr_J-eax.csv  Dr_J-eax.dig  Dr_evol-eax.csv  Dr_evol-eax.dig  Test UD.xlsx  Test all.xlsx  p-eax.csv  p-eax.dig  q-eax.csv  q-eax.dig
Sketch-Sand/: dense_drained.xlsx  dense_undrained.xlsx  loose_drained.xlsx  loose_undrained.xlsx
resampled_data/: linear_resampled_clay_data.xlsx
resampled_data_with_time/: linear_resampled_clay_data_with_time.xlsx  linear_resampled_sand_data_with_time.xlsx
