[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m02-tx-integrator"
version = "0.1.0"
description = "Object-oriented TXC integrator for IC MAGE M02 and M09 material models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
plots = [
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]